refactor: update findById methods to use Optional and throw ResourceNotFoundException